--- a/views/edit-item.ejs
+++ b/views/edit-item.ejs
@@ -1,23 +1,117 @@
 <%- include('partials/header') %>
-<!-- Register/Login/Cart -->
-<div class="register">
-    <% if (check) { %>
-    <a class="btn btn-light btn-med" href="/account" role="button">Account</a>
-    <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</button>
-        <% } else { %>
-        <a class="btn btn-light btn-med" href="/register" role="button">Register</a>
-        <button class="btn btn-dark btn-med" onclick="openLogin()">Login</button>
-        <% } %>
 
-        <a class="btn btn-light btn-med" href="#" role="button">CART</a>
+
+<div class="edit-form">
+    <form action="database-edit" method="POST">
+        <input name="itemID" style="display:none" type="text" value="<%= itemID %>">
+        <div class="form-group">
+            <label for="name">Name of item:</label>
+            <input name="nameOfItem" type="text" class="form-control" id="name" value="<%= itemName %>" required>
+        </div>
+        <div class="form-group">
+            <label for="description">Description:</label>
+            <textarea name="descriptionOfItem" class="form-control" id="description" rows="3" required><%= itemDesc %></textarea>
+        </div>
+        <div class="form-group">
+            <label for="type">Type of item:</label><br>
+            <select id="type" name="typeOfItem" class="btn btn-secondary btn-lg dropdown-toggle" value="<%= itemType %>"
+                required>
+                <option value="Clothing">Clothing</option>
+                <option value="Furniture">Furniture</option>
+                <option value="Toys">Toys</option>
+                <option value="Stroller">Stroller</option>
+            </select>
+        </div>
+        <!-- <div class="form-group">
+            <label class="btn btn-primary btn-lg" for="image-file">Upload Images</label>
+            <input class="custom-file-upload" type="file" id="image-file" name="itemImages" accept="images/*" multiple
+                required>
+        </div> -->
+        <div id="images">
+            <% for (i = 1; i < itemPics.length; i++) { %>
+            <div class="image-remove-overlay">
+                <img class="product-images"
+                    src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[i] %>" alt="">
+                <!-- <button class="btn-image-delete">Remove</button> -->
+            </div>
+            <% } %>
+        </div>
+        <div class="form-group">
+            <label for="manufacturer">Manufacturer (if applciable):</label>
+            <input name="manufacturerOfItem" type="text" class="form-control" id="manufacturer" value="<%= itemManu %>"
+                required>
+        </div>
+        <div class="form-group">
+            <label for="price">Asking price: (USD)</label>
+            <input name="priceOfItem" type="text" class="form-control" id="price" placeholder="$"
+                value="<%= itemPrice %>" required>
+        </div>
+        <div class="form-group">
+            <label for="city">City, State</label>
+            <input name="cityOfItem" type="text" class="form-control" id="city" placeholder="" value="<%= itemCity %>"
+                required>
+            <select id="state" name="stateOfItem" class="btn btn-secondary dropdown-toggle" value="<%= itemState %>"
+                required>
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="DC">District Of Columbia</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+            </select>
+        </div>
+        <button id="edit-item" class="btn btn-primary btn-lg btn-block">Confirm Changes</button>
+    </form>
+    <form action="delete-item" method="POST">
+        <input name="itemID" style="display:none" type="text" value="<%= itemID %>">
+        <button type="submit">deLEtE ItEm</button>
+    </form>
 </div>
-</div>
-
-
-<form action="delete-item" method="POST">
-    <input name="itemID" id="id" type="text" value="<%= itemID %>">
-    <button type="submit">deLEtE ItEm</button>
-</form>
 
 
 <%- include('partials/footer') %>
