i am the pagination king

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -288,6 +288,14 @@ input[type=password] {
   object-fit: contain;
 }
 
+/* Paginator */
+
+.paginator {
+  width: 750px;
+  margin: auto;
+  display: flex;
+}
+
 /* Item Upload Page */
 
 .itemDetails {
