--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,7 +92,7 @@
     <div class="card-body">
       <h5 class="card-title">Strollers</h5>
       <p class="card-text">Go mobile with one of our strollers!</p>
-      <a href="/shop/Strollers" class="btn btn-primary">Browse Strollers</a>
+      <a href="/shop/Stroller" class="btn btn-primary">Browse Strollers</a>
     </div>
   </div>
 </div>
