--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -22,7 +22,7 @@
       <div>
         <p>$<%= item.price %></p>
         <hr>
-        <p><b>Seller:</b> Yo mama</p>
+        <p><b>Seller:</b> XXXXXXX</p>
         <p><b>Location:</b> <%= item.city %>, <%= item.state %></p>
       </div>
       <div class="shop-item-overlay">
@@ -33,24 +33,41 @@
   <% }); %>
 </div>
 
-<nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        <span class="sr-only">Previous</span>
-      </a>
-    </li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        <span class="sr-only">Next</span>
-      </a>
-    </li>
-  </ul>
-</nav>
+<form class="paginator" action="<%= itemType %>" method="POST">
+  <input type="text" value="<%= placeholder %>" name="searchText" style="display: none;">
+  <input type="text" value="<%= category %>" name="category" style="display: none;">
+  <div class="limitor">
+    <select name="pageLimit" id="page-limit" onchange="this.form.submit()">
+      <% switch(pageLimit) {
+      case 4: %>
+      <option selected value="4">4</option>
+      <option value="8">8</option>
+      <option value="12">12</option>
+      <% break;
+      case 8: %>
+      <option value="4">4</option>
+      <option selected value="8">8</option>
+      <option value="12">12</option>
+      <% break;
+      case 12: %>
+      <option value="4">4</option>
+      <option value="8">8</option>
+      <option selected value="12">12</option>
+      <% break;
+      default: %>
+      <option selected value="4">4</option>
+      <option value="8">8</option>
+      <option value="12">12</option>
+      <% break;
+      } %>
+    </select>
+  </div>
+  <div class="page">
+    <button name="previous">previous</button>
+    <input type="number" name="pageNumber" value="<%= pageNum %>">
+    <button name="next">next</button>
+  </div>
+</form>
+
 
 <%- include('partials/footer') %>
