--- a/views/upload-error.ejs
+++ b/views/upload-error.ejs
@@ -1,24 +1,18 @@
 <%- include('partials/header') %>
 
-<!-- Register/Login/Cart -->
-<div class="register">
-  <% if (check) { %>
-  <a class="btn btn-light btn-med" href="/account" role="button">Account</a>
-  <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</button>
-    <% } else { %>
-    <a class="btn btn-light btn-med" href="/register" role="button">Register</a>
-    <button class="btn btn-dark btn-med" onclick="openLogin()">Login</button>
-    <% } %>
 
-    <a class="btn btn-light btn-med" href="#" role="button">CART</a>
-</div>
+<div class="upload-error-head">
+  <h4>An error has occured with your upload.</h4>
+  <h5>Please try again later or contact customer support.</h5>
+  <hr>
+  <p><%= error %></p>
 </div>
 
+<div class="upload-error-foot">
+  <a class="btn btn-light btn-med" href="/item-upload">Try Again</a>
+  <a class="btn btn-light btn-med" href="/account">View Account</a>
+  <a class="btn btn-light btn-med" href="/">Return Home</a>
+</div>
 
-
-An error occured uploading your item to our database.
-<button>Try Again</button>
-<button>View Account</button>
-<button>Return Home</button>
 
 <%- include('partials/footer') %>
