--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -298,9 +298,10 @@ input[type=password] {
 
 /* Item Upload Page */
 
-.itemDetails {
-  width: 75%;
+.item-details {
+  width: 1000px;
   margin: auto;
+  padding-top: 50px;
 }
 
 input[type="file"] {
@@ -316,8 +317,8 @@ input[type="file"] {
 
 #images {
   /* display: none; */
-  max-height: 300px;
-  height: 300px;
+  max-height: 250px;
+  height: 250px;
   overflow-x: hidden;
   overflow-y: hidden;
   white-space: nowrap;
@@ -331,12 +332,12 @@ input[type="file"] {
 }
 
 .product-images {
-  height: 300px;
+  height: 250px;
 }
 
 .image-remove-overlay {
   display: inline-block;
-  height: 300px;
+  height: 250px;
   position: relative;
 }
 
@@ -346,6 +347,23 @@ input[type="file"] {
   top: 10px;
   right: 10px;
   position: absolute;
+}
+
+.name-type {
+  display: flex;
+}
+
+.city-state {
+  display: flex;
+}
+
+#add-items {
+  width: 80%;
+  margin: auto;
+  margin-top: 50px;
+  background-color: #9EC4C5; 
+  color: #212529; 
+  border-color: #9EC4C5;
 }
 
 /* user-items */
@@ -526,4 +544,7 @@ input[type="file"] {
 
 footer {
   text-align: center;
+  margin-top: 100px;
+  padding: 100px;
+  background-color: #9EC4C5;
 }
