--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -6,27 +6,30 @@
         aria-valuemax="100"></div>
 </div>
 
-<div class="itemDetails">
+<div class="item-details">
     <form action="database-add" method="POST" enctype="multipart/form-data">
-        <div class="form-group">
-            <label for="name">Name of item:</label>
-            <input name="nameOfItem" type="text" class="form-control" id="name" required>
+        <div class="name-type">
+            <div class="form-group" style="padding-right: 20px; width: 50%;">
+                <label for="name">Name of item:</label>
+                <input name="nameOfItem" type="text" class="form-control" id="name" required>
+            </div>
+            <div class="form-group" style="padding-left: 20px; width: 50%;">
+                <label for="type" style="padding-bottom: 7.5px;">Type of item:</label><br>
+                <select style="width: 150px; background-color: #212529;" id="type" name="typeOfItem"
+                    class="btn btn-secondary btn-med dropdown-toggle" value="" required>
+                    <option value="Clothing">Clothing</option>
+                    <option value="Furniture">Furniture</option>
+                    <option value="Toys">Toys</option>
+                    <option value="Stroller">Stroller</option>
+                </select>
+            </div>
         </div>
         <div class="form-group">
             <label for="description">Description:</label>
             <textarea name="descriptionOfItem" class="form-control" id="description" rows="3" required></textarea>
         </div>
-        <div class="form-group">
-            <label for="type">Type of item:</label><br>
-            <select id="type" name="typeOfItem" class="btn btn-secondary btn-lg dropdown-toggle" required>
-                <option value="Clothing">Clothing</option>
-                <option value="Furniture">Furniture</option>
-                <option value="Toys">Toys</option>
-                <option value="Stroller">Stroller</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label class="btn btn-primary btn-lg" for="image-file">Upload Images</label>
+        <div class="form-group" style="padding-top: 15px;">
+            <label class="btn btn-primary btn-lg"  style="background-color: #9EC4C5; color: #212529; border-color: #9EC4C5;" for="image-file">Upload Images</label>
             <input class="custom-file-upload" type="file" id="image-file" name="itemImages" accept="images/*" multiple
                 required>
         </div>
@@ -35,7 +38,7 @@
                 Upload at least one image of your item
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="padding-top: 25px;">
             <label for="manufacturer">Manufacturer (if applciable):</label>
             <input name="manufacturerOfItem" type="text" class="form-control" id="manufacturer" required>
         </div>
@@ -43,64 +46,70 @@
             <label for="price">Asking price: (USD)</label>
             <input name="priceOfItem" type="text" class="form-control" id="price" placeholder="$" required>
         </div>
-        <div class="form-group">
-            <label for="city">City, State</label>
-            <input name="cityOfItem" type="text" class="form-control" id="city" placeholder="" required>
-            <select id="state" name="stateOfItem" class="btn btn-secondary dropdown-toggle" required>
-                <option value="AL">Alabama</option>
-                <option value="AK">Alaska</option>
-                <option value="AZ">Arizona</option>
-                <option value="AR">Arkansas</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="DE">Delaware</option>
-                <option value="DC">District Of Columbia</option>
-                <option value="FL">Florida</option>
-                <option value="GA">Georgia</option>
-                <option value="HI">Hawaii</option>
-                <option value="ID">Idaho</option>
-                <option value="IL">Illinois</option>
-                <option value="IN">Indiana</option>
-                <option value="IA">Iowa</option>
-                <option value="KS">Kansas</option>
-                <option value="KY">Kentucky</option>
-                <option value="LA">Louisiana</option>
-                <option value="ME">Maine</option>
-                <option value="MD">Maryland</option>
-                <option value="MA">Massachusetts</option>
-                <option value="MI">Michigan</option>
-                <option value="MN">Minnesota</option>
-                <option value="MS">Mississippi</option>
-                <option value="MO">Missouri</option>
-                <option value="MT">Montana</option>
-                <option value="NE">Nebraska</option>
-                <option value="NV">Nevada</option>
-                <option value="NH">New Hampshire</option>
-                <option value="NJ">New Jersey</option>
-                <option value="NM">New Mexico</option>
-                <option value="NY">New York</option>
-                <option value="NC">North Carolina</option>
-                <option value="ND">North Dakota</option>
-                <option value="OH">Ohio</option>
-                <option value="OK">Oklahoma</option>
-                <option value="OR">Oregon</option>
-                <option value="PA">Pennsylvania</option>
-                <option value="RI">Rhode Island</option>
-                <option value="SC">South Carolina</option>
-                <option value="SD">South Dakota</option>
-                <option value="TN">Tennessee</option>
-                <option value="TX">Texas</option>
-                <option value="UT">Utah</option>
-                <option value="VT">Vermont</option>
-                <option value="VA">Virginia</option>
-                <option value="WA">Washington</option>
-                <option value="WV">West Virginia</option>
-                <option value="WI">Wisconsin</option>
-                <option value="WY">Wyoming</option>
-            </select>
+        <div class="city-state">
+            <div class="form-group" style="padding-right: 20px; width: 50%;">
+                <label for="city">City</label>
+                <input name="cityOfItem" type="text" class="form-control" id="city" placeholder="" required>
+            </div>
+            <div class="form-group" style="padding-left: 20px; width: 50%;">
+                <label  style="padding-bottom: 7.5px;" for="state">State</label>
+                <br>
+                <select style="background-color: #212529;" id="state" name="stateOfItem" class="btn btn-secondary dropdown-toggle" required>
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District Of Columbia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
+                </select>
+            </div>
         </div>
-        <button id="addItems" class="btn btn-primary btn-lg btn-block">Add Item!</button>
+        <button id="add-items" class="btn btn-primary btn-lg btn-block">Add Item!</button>
     </form>
 </div>
 
