edit success for items and redirect for addresses

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -546,5 +546,5 @@ footer {
   text-align: center;
   margin-top: 100px;
   padding: 100px;
-  background-color: #9EC4C5;
+  background-color: #617575;
 }
