--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="icon" href="../images/icons8-stroller-64.png">
 
 </head>
 
