--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,43 +1,40 @@
 <%- include('partials/header') %>
-</div>
 
-<div class="container mt-5">
+
+<div class="reg">
   <h1>Register</h1>
 
-  <div class="row">
-    <div class="col-sm-8">
-      <div class="card">
-        <div class="card-body">
-
-          <!-- Makes POST request to /register route -->
-          <form action="/register" method="POST">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
-            </div>
-            <button type="submit" class="btn btn-dark">Register</button>
-          </form>
-
+  <!-- Makes POST request to /register route -->
+  <div class="reg-inner">
+    <div class="sign-in-default">
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" name="username">
         </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" style="margin: 0; padding: .375rem .75rem;">
+        </div>
+        <button type="submit" class="btn btn-dark">Register</button>
+      </form>
+    </div>
+    <div class="reg-separator">
+      <div style="border-right: 3px solid #212529; height: 45%; width: 40px;"></div>
+      <div style="text-align: center;">OR</div>
+      <div style="border-right: 3px solid #212529; height: 45%; width: 40px;"></div>
+    </div>
+    <div class="sign-in-alternates">
+      <div class="alt-sign-in">
+        <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
+          <img class="google-img" src="../images/icons8-google-100.png" alt="">
+          Sign Up with Google
+        </a>
       </div>
     </div>
-
-    <div class="col-sm-4">
-      <div class="card social-block">
-        <div class="card-body">
-          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign Up with Google
-          </a>
-        </div>
-      </div>
-    </div>
-
   </div>
+
 </div>
+
 
 <%- include('partials/footer') %>
