--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -119,7 +119,7 @@
       </div>
       <% } %>
       <div class="btn-cart">
-        <a class="btn btn-light btn-med" href="#" role="button">CART</a>
+        <a class="btn btn-light btn-med" href="/cart" role="button">CART</a>
       </div>
     </div>
   </div>
