add payment methods but now this shit is all fucked

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -570,6 +570,12 @@ input[type="file"] {
   margin: auto;
 }
 
+.payment-method-form {
+  display: none;
+  width: 800px;
+  margin: auto;
+}
+
 /* edit-item */
 
 .edit-form {
