--- a/views/account-settings.ejs
+++ b/views/account-settings.ejs
@@ -1,99 +1,14 @@
 <%- include('partials/header') %>
 
 
-<div class="setting-blocks">
-    <h1>Your Addresses</h1>
+<!-- Addresses -->
+<a href="/account-settings/addresses">Your Addresses</a>
 
-    <div class="addresses">
-        <% addressList.forEach(function(addy) { %>
-        <div class="outer-addy">
-            <div class="inner-addy">
-                <form action="delete-address" method="POST"
-                    onsubmit="return confirm('Are you sure you want to delete this address?');">
-                    <div>
-                        <input name="addressID" style="display:none;" value="<%= addy._id %>">
-                        <h6><b><%= addy.fullname %></b></h6>
-                        <h6><%= addy.address1 %> <%=addy.address2 %></h6>
-                        <h6><%= addy.city %> <%= addy.state %>, <%= addy.zip %></h6>
-                    </div>
-                    <div>
-                        <a class="btn btn-light btn-sm" href="/edit-address/<%= addy._id %>">Edit</a>
-                        <button type="submit" class="btn btn-dark btn-sm">Remove</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <% }); %>
-    </div>
+<!-- Payment Methods -->
+<a href="/account-settings/payment-methods">Manage Payment Methods</a>
 
-    <button onclick="toggleAddAddress()">Add new address</button>
-    <form class="address-form" method="POST" action="address-add">
-        <div class="form-group">
-            <label for="fullname">Full Name:</label>
-            <input name="fullname" type="text" class="form-control" id="fullname" required>
-            <label for="address1">Address Line 1:</label>
-            <input name="address1" type="text" class="form-control" id="address1"
-                placeholder="Street address, PO Box, Company name" required>
-            <label for="address2">Address Line 2:</label>
-            <input name="address2" type="text" class="form-control" id="address2"
-                placeholder="Apartment, suite, unit, building, etc.">
-            <label for="city">City:</label>
-            <input name="city" type="text" class="form-control" id="city" required>
-            <label for="state">State:</label>
-            <input name="state" type="text" class="form-control" id="state" required>
-            <label for="zipcode">Zip Code:</label>
-            <input name="zipcode" type="text" class="form-control" id="zipcode" required>
-        </div>
-        <button type="submit" id="add-address" class="btn btn-primary btn-lg btn-block">Add Address</button>
-    </form>
-</div>
-
-<div class="setting-blocks">
-    <h1>Payment Methods</h1>
-
-    <div class="payments">
-        <% paymentList.forEach(function(payment) { %>
-        <div class="outer-payment">
-            <div class="inner-paymenr">
-                <form action="delete-payment" method="POST"
-                    onsubmit="return confirm('Are you sure you want to delete this payment method?');">
-                    <div>
-                        <input name="paymentID" style="display:none;" value="<%= payment._id %>">
-                        <h6><b><%= payment.fullname %></b></h6>
-                        <h6><%= payment.cardNumber %></h6>
-                        <h6><%= payment.expirationDate %> <%= payment.cvv %>, <%= payment.zip %></h6>
-                    </div>
-                    <div>
-                        <a class="btn btn-light btn-sm" href="/edit-payment/<%= payment._id %>">Edit</a>
-                        <button type="submit" class="btn btn-dark btn-sm">Remove</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <% }); %>
-    </div>
-
-    <button onclick="toggleAddPaymentMethod()">Add new payment method</button>
-    <form class="payment-method-form" method="POST" action="payment-add">
-        <div class="form-group">
-            <label for="fullname">Full name on card:</label>
-            <input name="fullname" type="text" class="form-control" id="fullname" required>
-            <label for="cardNumber">Card Number:</label>
-            <input name="cardNumber" type="text" class="form-control" id="cardNumber" placeholder="XXXX-XXXX-XXXX-XXXX"
-                required>
-            <label for="expDate">Exp. Date:</label>
-            <input name="expDate" type="text" class="form-control" id="expDate" required>
-            <label for="cvv">CVV:</label>
-            <input name="cvv" type="text" class="form-control" id="cvv" required>
-            <label for="zipcode">Zip Code:</label>
-            <input name="zipcode" type="text" class="form-control" id="zipcode" required>
-        </div>
-        <button type="submit" id="add-payment" class="btn btn-primary btn-lg btn-block">Add Payment Method</button>
-</div>
-
-<div class="setting-blocks">
-    <h1>Notification Preferences</h1>
-</div>
+<!-- Notifcation Preferences -->
+<a href="/account-settings/notification-preferences">Notification Preferences</a>
 
 
 <%- include('partials/footer') %>
