fucked a lot of shit up

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,7 +62,7 @@
     <div class="card-body">
       <h5 class="card-title">Clothing</h5>
       <p class="card-text">Shop our excellent selection of clothing items!</p>
-      <a href="/shop/Clothing" class="btn btn-primary">Browse Clothing</a>
+      <a href="/search-results/Clothing" class="btn btn-primary">Browse Clothing</a>
     </div>
   </div>
 
@@ -72,7 +72,7 @@
     <div class="card-body">
       <h5 class="card-title">Toys</h5>
       <p class="card-text">Explore safe, clean, and stimulating toys!</p>
-      <a href="/shop/Toys" class="btn btn-primary">Browse Toys</a>
+      <a href="/search-results/Toys" class="btn btn-primary">Browse Toys</a>
     </div>
   </div>
 
@@ -82,7 +82,7 @@
     <div class="card-body">
       <h5 class="card-title">Furniture</h5>
       <p class="card-text">Find exactly what you're looking for!</p>
-      <a href="/shop/Furniture" class="btn btn-primary">Browse Furniture</a>
+      <a href="/search-results/Furniture" class="btn btn-primary">Browse Furniture</a>
     </div>
   </div>
 
@@ -92,7 +92,7 @@
     <div class="card-body">
       <h5 class="card-title">Strollers</h5>
       <p class="card-text">Go mobile with one of our strollers!</p>
-      <a href="/shop/Stroller" class="btn btn-primary">Browse Strollers</a>
+      <a href="/search-results/Stroller" class="btn btn-primary">Browse Strollers</a>
     </div>
   </div>
 </div>
