--- a/views/item.ejs
+++ b/views/item.ejs
@@ -13,8 +13,7 @@
   </div>
   <div class="information">
     <h2><%= itemName %></h2>
-    <h6><%= itemManu %></h6>
-    <hr>
+    <h6>Made by <b><%= itemManu %></b></h6>
     <h3>$<%= itemPrice %></h3>
     <hr>
     <h6><%= itemCity %>, <%=itemState %></h6>
