--- a/views/account-settings.ejs
+++ b/views/account-settings.ejs
@@ -10,5 +10,8 @@
 <!-- Notifcation Preferences -->
 <a href="/account-settings/notification-preferences">Notification Preferences</a>
 
+<!-- Delete Account -->
+<a href="/account-settings/delete-account">Delete Account</a>
+
 
 <%- include('partials/footer') %>
