--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,6 +102,7 @@
   <h2>Browse all of our products!</h2>
 </div>
 
+<% try { %>
 <div class="shop-items">
   <% itemList.forEach(function(item) { %>
   <a class="shop-item-links" href="/item/<%= item.id %>">
@@ -127,6 +128,8 @@
   </a>
   <% }); %>
 </div>
+<% } catch { %>
+<% } %>
 
 
 <%- include('partials/footer') %>
