--- a/views/item.ejs
+++ b/views/item.ejs
@@ -14,6 +14,7 @@
   <div class="information">
     <h2><%= itemName %></h2>
     <h6>Made by <b><%= itemManu %></b></h6>
+    <h6>Condition: <b><%= itemCondition %></b></h6>
     <h3>$<%= itemPrice %></h3>
     <hr>
     <h6><%= itemCity %>, <%=itemState %></h6>
