--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -13,7 +13,7 @@
                 <label for="name">Name of item:</label>
                 <input name="nameOfItem" type="text" class="form-control" id="name" required>
             </div>
-            <div class="form-group" style="padding-left: 20px; width: 50%;">
+            <div class="form-group" style="padding-left: 20px; width: 25%;">
                 <label for="type" style="padding-bottom: 7.5px;">Type of item:</label><br>
                 <select style="width: 150px; background-color: #212529;" id="type" name="typeOfItem"
                     class="btn btn-secondary btn-med dropdown-toggle" value="" required>
@@ -21,6 +21,17 @@
                     <option value="Furniture">Furniture</option>
                     <option value="Toys">Toys</option>
                     <option value="Stroller">Stroller</option>
+                </select>
+            </div>
+            <div class="form-group" style="padding-left: 20px; width: 25%;">
+                <label for="condition" style="padding-bottom: 7.5px;">Condition:</label><br>
+                <select style="width: 150px; background-color: #212529;" id="condition" name="conditionOfItem"
+                    class="btn btn-secondary btn-med dropdown-toggle" value="" required>
+                    <option value="Brand New">Brand New</option>
+                    <option value="Like New">Like New</option>
+                    <option value="Very Good">Very Good</option>
+                    <option value="Good">Good</option>
+                    <option value="Acceptabler">Acceptable</option>
                 </select>
             </div>
         </div>
